Restructure user interface

--- a/index.html
+++ b/index.html
@@ -2,72 +2,75 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
 </head>
 
-<body background="assets/back1.jpg">
+<body>
     <h1 class="text-center">YORI Cooking Robot Interface</h1>
     <div class="container text-center">
         <div class="row">
-            <div class="col-sm border border-dark">
-                <h2>Current Operation</h2>
+            <div class="col border border-dark">
+                <h2>Current Operation: Pasta</h2>
             </div>
-            <div class="col-sm border border-dark">
-                <h2>Available Operations</h2>
+            <div class="col"></div>
+            <div class="col"></div>
+            <div class="col border border-dark">
+                <h2>Appliance</h2>
+            </div>
+            <div class="col border border-dark">
+                <h3>Current Temperature (F)</h3>
+            </div>
+            <div class="col border border-dark">
+                <h3>Optimal Temperature (F)</h3>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm">
-                <h3>Pasta</h3>
+            <div class="col border border-dark">
+                <h2>Available Operations:</h2>
             </div>
-            <div class="col-sm" class="dropdown">
-                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <div class="col"></div>
+            <div class="col"></div>
+            <div class="col border border-dark">
+                <h2>Pasta Cooker</h2>
+            </div>
+            <div class="col border border-dark">
+                <h4>100 degrees</h4>
+            </div>
+            <div class="col border border-dark">
+                <h4>120 degrees</h4>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col" class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Operations
-                  </button>
-                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" href="#">Fried Chicken</a>
                     <a class="dropdown-item" href="#">Pasta</a>
                     <a class="dropdown-item" href="#">Steak</a>
-                  </div>
+                </div>
             </div>
-        </div>
-        <div class="row">
-            <div class="col-sm border border-dark">
-                <h2>Appliance</h2>
+            <div class="col"></div>
+            <div class="col"></div>
+            <div class="col border border-dark">
+                <h2>Broiler</h2>
             </div>
-            <div class="col-sm border border-dark">
-                <h2>Current Temperature (F)</h2>
-            </div>
-            <div class="col-sm border border-dark">
-                <h2>Optimal Temperature (F)</h2>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm border border-dark">
-                <h3>Pasta Cooker</h3>
-            </div>
-            <div class="col-sm border border-dark">
+            <div class="col border border-dark">
                 <h4>100 degrees</h4>
             </div>
-            <div class="col-sm border border-dark">
+            <div class="col border border-dark">
                 <h4>120 degrees</h4>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm border border-dark">
-                <h3>Broiler</h3>
-            </div>
-            <div class="col-sm border border-dark">
-                <h4>100 degrees</h4>
-            </div>
-            <div class="col-sm border border-dark">
-                <h4>120 degrees</h4>
-            </div>
+            <h1 style="color:white">Filler Text</h1>
         </div>
         <div class="row">
             <div class="col-sm">
@@ -77,16 +80,16 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-    crossorigin="anonymous"></script>
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+        crossorigin="anonymous"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-    crossorigin="anonymous"></script>
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+        crossorigin="anonymous"></script>
 
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-    crossorigin="anonymous"></script>
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
